--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,5 +1,5 @@
-$color-first: #240046;
+$color-first: #f72585;
 $color-second: #ef233c;
 $color-third: #d90429;
-$color-four: #f72585;
+$color-four: #7209b7;
 $color-five: #4361ee;
